use sample instead of iframe for flex axis

--- a/css-layout/index.html
+++ b/css-layout/index.html
@@ -138,9 +138,7 @@
                 <section data-sample-url="samples/flex/flexbox-flex.html"></section>
                 <section data-sample-url="samples/flex/flexbox-items-grid.html"></section>
                 <section data-markdown="samples/flex/flex-axis.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-                <section>
-                    <iframe src="samples/flex/flexbox-axis.html" width="100%" height="100%" frameBorder="0"></iframe>
-                </section>
+                <section data-sample-url="samples/flex/flexbox-axis.html"></section>
                 <section data-sample-url="samples/flex/flexbox-fokus.html"></section>
                 <section data-markdown="samples/grid/grid.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
                 <section>
