add padding for item

--- a/css-layout/samples/grid/grid-item-position.html
+++ b/css-layout/samples/grid/grid-item-position.html
@@ -55,6 +55,7 @@
             
         .item {
             grid-area: article;
+            padding: 1em;
             background-color: deepskyblue;
         }
 
