add sample of autofill and autofit

--- a/css-layout/index.html
+++ b/css-layout/index.html
@@ -201,6 +201,7 @@
                     <h2>Vychtávky s Flexem a Gridem</h2>
                 </section>
                 <section data-sample-url="samples/flex/flex-super-center.html"></section>
+                <section data-sample-url="samples/grid/grid-auto-fit-auto-fill.html"></section>
                 <section data-sample-url="samples/grid/grid-layout.html"></section>
                 <section data-sample-url="samples/grid/grid-layout-rtl.html"></section>
                 <section data-sample-url="samples/grid/grid-auto-placemnet.html"></section>
