few more info about grid

--- a/css-layout/index.html
+++ b/css-layout/index.html
@@ -16,6 +16,10 @@
             display: flex;
             justify-content: space-around;
         }
+
+        .section__content__column {
+            text-align: left;
+        }
     </style>
 </head>
 <body>
@@ -168,21 +172,35 @@
                             </ul>
                         </div>
                         <div class="section__content__column">
-                            <ul>
-                                <li>
-                                    Childs<ul>
-                                        <li>grid-column-start</li>
-                                        <li>grid-column-end</li>
-                                        <li>grid-row-start</li>
-                                        <li>grid-row-end</li>
-                                        <li>grid-column</li>
-                                        <li>grid-row</li>
-                                        <li>grid-area</li>
-                                        <li>justify-self</li>
-                                        <li>align-self</li>
-                                    </ul>
-                                </li>
-                            </ul>
+                            <div>
+                                <ul>
+                                    <li>
+                                        Childs<ul>
+                                            <li>grid-column-start</li>
+                                            <li>grid-column-end</li>
+                                            <li>grid-row-start</li>
+                                            <li>grid-row-end</li>
+                                            <li>grid-column</li>
+                                            <li>grid-row</li>
+                                            <li>grid-area</li>
+                                            <li>justify-self</li>
+                                            <li>align-self</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div>
+                                <ul>
+                                    <li>
+                                        Další
+                                        <ul>
+                                            <li>Jednotka fr</li>
+                                            <li>funkce minmax</li>
+                                            <li>funkce repeat</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </section>
