--- a/css-layout/samples/grid/grid-photogallery.html
+++ b/css-layout/samples/grid/grid-photogallery.html
@@ -79,7 +79,7 @@
             <div class="photo photo--portrait">
                 <img sizes="(min-width: 51em) 50vw, 100vw"
                      src="../resources/photos/09.jpg"
-                     srcset="../resources/photos//09.jpg 768w, ../resources/photos//09_288.jpg 162w, ../resources/photos//09_384.jpg 216w, ../resources/photos//09_461.jpg 259w, ../resources/photos//09_576.jpg 324w" />
+                     srcset="../resources/photos/09.jpg 768w, ../resources/photos/09_288.jpg 288w, ../resources/photos/09_384.jpg 384w, ../resources/photos/09_461.jpg 461w, ../resources/photos/09_576.jpg 576w" />
             </div>
             <div class="photo">
                 <img sizes="(min-width: 51em) 50vw, 100vw"
