Add aspect ratio samples

--- a/css-layout/index.html
+++ b/css-layout/index.html
@@ -225,7 +225,8 @@
                 <section data-sample-url="samples/grid/grid-layout-rtl.html"></section>
                 <section data-sample-url="samples/grid/grid-auto-placemnet.html"></section>
                 <section data-sample-url="samples/grid/grid-photogallery.html"></section>
-
+                <section data-sample-url="samples/images/image-aspect-ratio.html"></section>
+                <section data-sample-url="samples/images/object-aspect-ratio.html"></section>
             </section>
             <section>
                 Martin Dybal
