--- a/responsive-images/index.html
+++ b/responsive-images/index.html
@@ -1,8 +1,8 @@
 ﻿<html>
 <head>
-    <link rel="stylesheet" href="/reveal/css/reveal.css">
-    <link rel="stylesheet" href="/reveal/css/theme/white.css">
-    <link rel="stylesheet" href="/reveal/lib/css/highlightjs-vs.css" />
+    <link rel="stylesheet" href="../reveal/css/reveal.css">
+    <link rel="stylesheet" href="../reveal/css/theme/white.css">
+    <link rel="stylesheet" href="../reveal/lib/css/highlightjs-vs.css" />
     <link href="plugins/code-sample/code-sample.css" rel="stylesheet" />
 
     <style>
@@ -705,13 +705,13 @@ if (context.Request.Path.HasValue && context.Request.Path.Value.StartsWith("/ima
             </section>
         </div>
     </div>
-    <script src="/reveal/lib/js/head.min.js"></script>
-    <script src="/reveal/js/reveal.js"></script>
-    <script src="/reveal/plugin/markdown/marked.js"></script>
-    <script src="/reveal/plugin/markdown/markdown.js"></script>
-    <script src="/reveal/plugin/highlight/highlight.js"></script>
-    <script src="/reveal/plugin/notes/notes.js"></script>
-    <script src="/reveal-initialize.js"></script>
+    <script src="../reveal/lib/js/head.min.js"></script>
+    <script src="../reveal/js/reveal.js"></script>
+    <script src="../reveal/plugin/markdown/marked.js"></script>
+    <script src="../reveal/plugin/markdown/markdown.js"></script>
+    <script src="../reveal/plugin/highlight/highlight.js"></script>
+    <script src="../reveal/plugin/notes/notes.js"></script>
+    <script src="../reveal-initialize.js"></script>
     <script src="plugins/code-sample/code-sample.js"></script>
 </body>
 </html>
