Simplify tests slides

--- a/20181123-Update-DotVVM/index.html
+++ b/20181123-Update-DotVVM/index.html
@@ -116,7 +116,7 @@
             </section>
             <section id="tests">
                 <section>
-                    <h1>Unit & Integration tests</h1>
+                    <h1>Tests</h1>
 
                     <aside class="notes">
                         Thanks to the MVVM patter you can simply write Unit or Integration tests
@@ -124,12 +124,7 @@
                         You can find some helper classes in namespace DotVVM.Framework.Testing
                         
                         We are using xUnit, but it's on your choice
-                    </aside>
-                </section>
-                <section>
-                    <h1>UI tests</h1>
-                    
-                    <aside class="notes">
+
                         We have also test framework for DotVVM UI testing. Which make your life a lot of easier! 
                     </aside>
                 </section>
