--- a/20181123-Update-DotVVM/index.html
+++ b/20181123-Update-DotVVM/index.html
@@ -57,7 +57,8 @@
                         <li class="fragment"><a href="#tests">Tests</a></li>
                     </ul>
                     <br/>
-                    <a target="_blank" href="https://github.com/martindybal/dotvvm-samples-FlightFinder">https://github.com/martindybal/dotvvm-samples-FlightFinder</a>
+                    <br/>
+                    <a class="fragment" target="_blank" href="https://github.com/martindybal/dotvvm-samples-FlightFinder">https://github.com/martindybal/dotvvm-samples-FlightFinder</a>
                 </section>
             </section>
             <section id="how-does-it-work">
