--- a/20181123-Update-DotVVM/index.html
+++ b/20181123-Update-DotVVM/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../reveal/lib/css/highlightjs-vs.css" />
     <link href="../plugins/code-sample/code-sample.css" rel="stylesheet" />
 
+    <title>DotVVM in Real Business Web Apps</title>
+
     <style>
         .side-by-side {
             display: flex;
