Add demo of real app

--- a/20181123-Update-DotVVM/index.html
+++ b/20181123-Update-DotVVM/index.html
@@ -50,6 +50,9 @@
                     </a>
                 </section>
                 <section>
+                    <img src="images/create_nest_item.gif" />
+                </section>
+                <section>
                     <h1>Flight finder</h1>
                     <h2>demo</h2>
                     <ul>
