--- a/20181123-Update-DotVVM/index.html
+++ b/20181123-Update-DotVVM/index.html
@@ -43,7 +43,7 @@
                 </section>
                 <section>
                     <h1>DotVVM in Real Business Web Apps</h1>
-                    <h2>Martin Dybal</h2>
+                    <h2><a target="_blank" href="https://www.dybal.it">Martin Dybal</a></h2>
                     <a target="_blank" href="https://www.dybal.it/presentations/20181123-Update-DotVVM/">
                         <img src="images/qr.svg"/> <br/>
                         https://www.dybal.it/presentations/20181123-Update-DotVVM/
@@ -142,6 +142,9 @@
                         <li><a target="_blank" href="https://github.com/riganti/dotvvm-hands-on-lab">Hands On Lab</a></li>
                         <li><a target="_blank" href="https://academy.dotvvm.com">Academy</a></li>
                     </ul>
+                    <br />
+                    <br />
+                    <h2><a target="_blank" href="https://www.dybal.it">Martin Dybal</a></h2>
                 </section>
             </section>
         </div>
