Add css Grid guide

--- a/20181211-Frontendisti-css-layout/samples/column/column-count-text.html
+++ b/20181211-Frontendisti-css-layout/samples/column/column-count-text.html
@@ -6,13 +6,19 @@
     <link href="../sample.css" rel="stylesheet" />
     <style id="sample-css">
         .text {
-            column-count: 4;
+            column-count: 3;
+            text-align: justify;
         }
 
         @media only screen and (max-width: 35em) {
             .text {
                 column-count: 1
             }
+        }
+    </style>
+    <style>
+        .text {
+            font-size: 1.3em;
         }
     </style>
 </head>
