--- a/20181211-Frontendisti-css-layout/samples/column/column-width.html
+++ b/20181211-Frontendisti-css-layout/samples/column/column-width.html
@@ -11,6 +11,11 @@
             text-align: justify;
         }
     </style>
+    <style>
+        .text {
+            font-size: 1.3em;
+        }
+    </style>
 </head>
 <body class="sample sample--in-iframe">
     <h1 class="sample__title"></h1>
