--- a/20181211-Frontendisti-css-layout/samples/grid/grid-fr-unit2.html
+++ b/20181211-Frontendisti-css-layout/samples/grid/grid-fr-unit2.html
@@ -33,7 +33,7 @@
         }
         .items--grid2 {
             display: grid;
-            grid-template-columns: 200px 1fr 1fr 10em;
+            grid-template-columns: 10% 1fr 1fr 10em;
         }
 
     </style>
@@ -47,7 +47,7 @@
             <div class="item">1fr</div>
         </div>
         <div class="items items--grid2">
-            <div class="item">200px</div>
+            <div class="item">10%</div>
             <div class="item item--orange">1fr</div>
             <div class="item">1fr</div>
             <div class="item item--orange">10em</div>
