--- a/css-layout/samples/column/column-count-text.html
+++ b/css-layout/samples/column/column-count-text.html
@@ -7,6 +7,7 @@
     <style id="sample-css">
         .text {
             column-count: 4;
+            text-align: justify;
         }
 
         @media only screen and (max-width: 35em) {
