--- a/20181211-Frontendisti-css-layout/samples/grid/grid-auto-placement.html
+++ b/20181211-Frontendisti-css-layout/samples/grid/grid-auto-placement.html
@@ -28,44 +28,46 @@
             justify-content: center;
         }
 
-        .item--large {
-            grid-column: auto/span 2;
+        .item--portrait {
             grid-row: auto/span 2;
         }
 
-        .item--portrait {
-            grid-row: auto/span 2;
+        @media only screen and (min-width: 52em) {
+            .item--large {
+                grid-column: auto/span 2;
+                grid-row: auto/span 2;
+            }
         }
     </style>
 </head>
 
 <body class="sample sample--in-iframe">
     <h1 class="sample__title"></h1>
-<div id="sample-html">
-    <div class="items">
-        <div class="item">
-            1
-        </div>
-        <div class="item item--large">
-            2
-        </div>
-        <div class="item">
-            3
-        </div>
-        <div class="item item--portrait">
-            4
-        </div>
-        <div class="item item--portrait">
-            5
-        </div>
-        <div class="item">
-            6
-        </div>
-        <div class="item">
-            7
+    <div id="sample-html">
+        <div class="items">
+            <div class="item">
+                1
+            </div>
+            <div class="item item--large">
+                2
+            </div>
+            <div class="item">
+                3
+            </div>
+            <div class="item item--portrait">
+                4
+            </div>
+            <div class="item item--portrait">
+                5
+            </div>
+            <div class="item">
+                6
+            </div>
+            <div class="item">
+                7
+            </div>
         </div>
     </div>
-</div>
 
     <script src="../sample.js"></script>
 </body>
