--- a/20181211-Frontendisti-css-layout/samples/grid/grid-item-positioning-multiple-cell.html
+++ b/20181211-Frontendisti-css-layout/samples/grid/grid-item-positioning-multiple-cell.html
@@ -13,6 +13,8 @@
     <style id="sample-css">
         .grid-item:nth-of-type(1) {
             grid-row: 1;
+          /*grid-column-start: 1;
+            grid-column-end: 3;*/
             grid-column: 1 / 3;
         }
 
