Add Venn diagram sample

--- a/20181211-Frontendisti-css-grid-advanced/index.html
+++ b/20181211-Frontendisti-css-grid-advanced/index.html
@@ -160,6 +160,7 @@
                 <section data-sample-url="samples/grid/flexbox-focus.html"></section>
                 <section data-sample-url="samples/grid/grid-layout.html"></section>
                 <section data-sample-url="samples/grid/grid-layout-rtl.html"></section>
+                <section data-sample-url="samples/grid/grid-venn.html"></section>
             </section>
             <section>
                 <section id="we-love-IE">
