--- a/20181211-Frontendisti-css-grid-advanced/samples/grid/grid-layout-rtl.html
+++ b/20181211-Frontendisti-css-grid-advanced/samples/grid/grid-layout-rtl.html
@@ -54,7 +54,10 @@
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: 10em auto 1fr 6em;
-            grid-template-areas: "header" "menu" "article" "footer";
+            grid-template-areas: "header" 
+                                 "menu" 
+                                 "article" 
+                                 "footer";
             grid-gap: 1em;
             justify-content: center;
             height: calc(100vh - 6em);
@@ -64,7 +67,9 @@
             .container {
                 grid-template-columns: auto 1fr;
                 grid-template-rows: 10em 1fr 6em;
-                grid-template-areas: "header header" "menu article" "footer footer";
+                grid-template-areas: "header header" 
+                                     "menu   article" 
+                                     "footer footer";
             }
         }
 
